--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,7 +17,8 @@
     group: jenkins
 
 - name: Create the job-dsl job
-  shell: java -jar '{{ jenkins_jar_location }}' -s '{{ solita_jenkins_url }}' create-job job-dsl <'/var/lib/jenkins/job-dsl-config.xml'
+  shell: >
+    {{ solita_jenkins_cli }} create-job job-dsl </var/lib/jenkins/job-dsl-config.xml
   args:
     creates: /var/lib/jenkins/jobs/job-dsl/config.xml
   register: create_job_dsl_job
@@ -33,7 +34,8 @@
   register: update_job_dsl_job
 
 - name: Reload the job-dsl job
-  command: java -jar {{ jenkins_jar_location }} -s '{{ solita_jenkins_url }}' reload-job job-dsl
+  command: >
+    {{ solita_jenkins_cli }} reload-job job-dsl
   when: update_job_dsl_job | changed
 
 - include: jobs.yml
