--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,3 +3,4 @@ solita_jenkins_plugins_required:
   - job-dsl
 solita_jenkins_job_dsl_workspace: /var/lib/jenkins/jobs/job-dsl/workspace
 solita_jenkins_url: http://{{ jenkins_hostname }}:{{ jenkins_http_port }}{{ jenkins_url_prefix | default('') }}
+solita_jenkins_cli: java -jar '{{ jenkins_jar_location }}' -s '{{ solita_jenkins_url }}'
