credentials: Rewrite with support for update & delete

--- a/tasks/credentials.yml
+++ b/tasks/credentials.yml
@@ -3,8 +3,14 @@
   solita_jenkins_credential:
     solita_jenkins_cli: "{{ solita_jenkins_cli }}"
     id: "{{ item.key }}"
-    name: "{{ item.value.name }}"
+    username: "{{ item.value.username }}"
     password: "{{ item.value.password }}"
-    description: "{{ item.value.description }}"
+    description: "{{ item.value.description | default('') }}"
   with_dict: "{{ solita_jenkins_credentials }}"
-  no_log: yes
+
+- name: Remove absent credentials
+  solita_jenkins_credential:
+    solita_jenkins_cli: "{{ solita_jenkins_cli }}"
+    id: "{{ item }}"
+    state: absent
+  with_items: "{{ solita_jenkins_absent_credentials }}"
