credentials: Add support for SSH keys

--- a/tasks/credentials.yml
+++ b/tasks/credentials.yml
@@ -1,10 +1,22 @@
 ---
+- name: Check that either password or SSH key options are provided
+  fail: msg="You must provide either password or private_key"
+  when: "not (('password' in item.value) or ('private_key' in item.value))"
+  with_dict: "{{ solita_jenkins_credentials }}"
+
+- name: Check that password and SSH key options are not mixed in the same credential
+  fail: msg="Can't use both password and private_key/passphrase"
+  when: "'password' in item.value and (('private_key' in item.value) or ('passphrase' in item.value))"
+  with_dict: "{{ solita_jenkins_credentials }}"
+
 - name: Add present credentials
   solita_jenkins_credential:
     solita_jenkins_cli: "{{ solita_jenkins_cli }}"
     id: "{{ item.key }}"
     username: "{{ item.value.username }}"
-    password: "{{ item.value.password }}"
+    password: "{{ item.value.password | default('') }}"
+    private_key: "{{ item.value.private_key | default('') }}"
+    passphrase: "{{ item.value.passphrase | default('') }}"
     description: "{{ item.value.description | default('') }}"
   with_dict: "{{ solita_jenkins_credentials }}"
 
