credentials: Censor Ansible logs

--- a/tasks/credentials.yml
+++ b/tasks/credentials.yml
@@ -3,11 +3,13 @@
   fail: msg="You must provide either password or private_key"
   when: "not (('password' in item.value) or ('private_key' in item.value))"
   with_dict: "{{ solita_jenkins_credentials }}"
+  no_log: yes
 
 - name: Check that password and SSH key options are not mixed in the same credential
   fail: msg="Can't use both password and private_key/passphrase"
   when: "'password' in item.value and (('private_key' in item.value) or ('passphrase' in item.value))"
   with_dict: "{{ solita_jenkins_credentials }}"
+  no_log: yes
 
 - name: Add present credentials
   solita_jenkins_credential:
@@ -19,6 +21,7 @@
     passphrase: "{{ item.value.passphrase | default('') }}"
     description: "{{ item.value.description | default('') }}"
   with_dict: "{{ solita_jenkins_credentials }}"
+  no_log: yes
 
 - name: Remove absent credentials
   solita_jenkins_credential:
