credentials: Make username optional for SSH keys

--- a/tasks/credentials.yml
+++ b/tasks/credentials.yml
@@ -1,11 +1,11 @@
 ---
-- name: Check that either password or SSH key options are provided
+- name: Check that either username/password or private_key is provided
   fail: msg="You must provide either password or private_key"
-  when: "not (('password' in item.value) or ('private_key' in item.value))"
+  when: "not ((('username' in item.value) and ('password' in item.value)) or ('private_key' in item.value))"
   with_dict: "{{ solita_jenkins_credentials }}"
   no_log: yes
 
-- name: Check that password and SSH key options are not mixed in the same credential
+- name: Check that password and SSH key options are not used in the same credential
   fail: msg="Can't use both password and private_key/passphrase"
   when: "'password' in item.value and (('private_key' in item.value) or ('passphrase' in item.value))"
   with_dict: "{{ solita_jenkins_credentials }}"
@@ -15,7 +15,7 @@
   solita_jenkins_credential:
     solita_jenkins_cli: "{{ solita_jenkins_cli }}"
     id: "{{ item.key }}"
-    username: "{{ item.value.username }}"
+    username: "{{ item.value.username | default('') }}"
     password: "{{ item.value.password | default('') }}"
     private_key: "{{ item.value.private_key | default('') }}"
     passphrase: "{{ item.value.passphrase | default('') }}"
