Fix assert broken in b4e0dee

--- a/tasks/security.yml
+++ b/tasks/security.yml
@@ -78,8 +78,8 @@
   fail: msg="User variables are only allowed with solita_jenkins_security_realm='jenkins'"
   when: (item | length > 0) and ((solita_jenkins_security_realm | default(None)) != 'jenkins')
   with_items:
-    - solita_jenkins_users
-    - solita_jenkins_absent_users
+    - "{{ solita_jenkins_users }}"
+    - "{{ solita_jenkins_absent_users }}"
 
 - name: Add present Jenkins users
   solita_jenkins_user:
