Allow overriding solita_jenkins_password_dir

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,3 +8,4 @@ solita_jenkins_jnlp_port: 0
 solita_jenkins_restart: yes
 solita_jenkins_credentials: {}
 solita_jenkins_absent_credentials: []
+solita_jenkins_password_dir: "{{ inventory_dir | default('.') }}/solita_jenkins_default_password"
