Add support for Job DSL 1.60
Use the Authorize Project plugin [1] to run the `job-dsl` job as
`solita_jenkins` in a Groovy sandbox. This works around the script
approval process introduced in Job DSL 1.60. [2]

[1] https://plugins.jenkins.io/authorize-project
[2] https://github.com/jenkinsci/job-dsl-plugin/wiki/Script-Security

--- a/tasks/security.yml
+++ b/tasks/security.yml
@@ -71,8 +71,19 @@
     backrefs: yes
   register: jnlp_port
 
+- name: Configure Authorize Project plugin
+  become: yes
+  copy:
+    src: jenkins.security.QueueItemAuthenticatorConfiguration.xml
+    dest: /var/lib/jenkins/jenkins.security.QueueItemAuthenticatorConfiguration.xml
+    owner: jenkins
+    group: jenkins
+    mode: u=rw,go=r
+    force: no
+  register: authorize_project
+
 - include: restart.yml
-  when: (matrix_auth_plugin | changed) or (security_realm | changed) or (jnlp_port | changed)
+  when: (matrix_auth_plugin | changed) or (security_realm | changed) or (jnlp_port | changed) or (authorize_project | changed)
 
 - name: Check that user variables are only used with solita_jenkins_security_realm='jenkins'
   fail: msg="User variables are only allowed with solita_jenkins_security_realm='jenkins'"
