--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,6 +3,7 @@ solita_jenkins_plugins_required:
   - job-dsl
   - credentials
   - ssh-credentials
+  - authorize-project
 solita_jenkins_job_dsl_workspace: /var/lib/jenkins/jobs/job-dsl/workspace
 solita_jenkins_url: "http://{{ jenkins_hostname }}:{{ jenkins_http_port }}{{ jenkins_url_prefix | default('') }}"
 solita_jenkins_cli: "sudo -u jenkins java -jar '{{ jenkins_jar_location }}' -s '{{ solita_jenkins_url }}' -auth 'solita_jenkins:{{ solita_jenkins_password }}'"
