Use a password file with Jenkins CLI

--- a/tasks/credentials.yml
+++ b/tasks/credentials.yml
@@ -21,6 +21,7 @@
     passphrase: "{{ item.value.passphrase | default('') }}"
     description: "{{ item.value.description | default('') }}"
   with_dict: "{{ solita_jenkins_credentials }}"
+  no_log: yes
 
 - name: Remove absent credentials
   solita_jenkins_credential:
