Restore <1.60 Job DSL behavior that allows imports by disabling Script Security.

--- a/tasks/security.yml
+++ b/tasks/security.yml
@@ -91,8 +91,19 @@
     force: no
   register: authorize_project
 
+- name: Disable script security for Job DSL scripts
+  become: yes
+  copy:
+    src: javaposse.jobdsl.plugin.GlobalJobDslSecurityConfiguration.xml
+    dest: /var/lib/jenkins/javaposse.jobdsl.plugin.GlobalJobDslSecurityConfiguration.xml
+    owner: jenkins
+    group: jenkins
+    mode: u=rw,go=r
+    force: no
+  register: disable_script_security
+
 - include: restart.yml
-  when: (matrix_auth_plugin | changed) or (security_realm | changed) or (jnlp_port | changed) or (authorize_project | changed)
+  when: (matrix_auth_plugin | changed) or (security_realm | changed) or (jnlp_port | changed) or (authorize_project | changed) or (disable_script_security | changed)
 
 - name: Check that user variables are only used with solita_jenkins_security_realm='jenkins'
   fail: msg="User variables are only allowed with solita_jenkins_security_realm='jenkins'"
