Install the correct version of geerlingguy.jenkins
The previously used syntax always installed the latest version.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,6 +13,6 @@ galaxy_info:
     versions:
       - all
 dependencies:
-  - role: geerlingguy.jenkins
+  - src: geerlingguy.jenkins
     version: 2.7.3
     become: yes
