--- a/tasks/jobs.yml
+++ b/tasks/jobs.yml
@@ -89,4 +89,4 @@
 - name: Run the Job DSL scripts
   shell: >
     {{ solita_jenkins_cli }} build job-dsl -s -v
-  when: ((scripts | length > 0) or (templates | length > 0)) and ((copy_scripts | changed) or (copy_templates | changed) or (remove_old_scripts | changed))
+  when: ((scripts | length > 0) or (templates | length > 0)) and ((copy_scripts is changed) or (copy_templates is changed) or (remove_old_scripts is changed))
