--- a/tasks/security.yml
+++ b/tasks/security.yml
@@ -1,4 +1,12 @@
 ---
+- name: Create an SSH key for the jenkins Unix user
+  become: yes
+  user: name=jenkins generate_ssh_key=yes
+  register: user
+
+- set_fact:
+    solita_jenkins_public_key: "{{ user.ssh_public_key }}"
+
 - name: Install the matrix-auth plugin and its dependencies
   become: yes
   get_url:
@@ -95,7 +103,7 @@
   register: disable_script_security
 
 - include: restart.yml
-  when: (matrix_auth_plugin | changed) or (security_realm | changed) or (jnlp_port | changed) or (authorize_project | changed) or (disable_script_security | changed)
+  when: (matrix_auth_plugin is changed) or (security_realm is changed) or (jnlp_port is changed) or (authorize_project is changed) or (disable_script_security is changed)
 
 - name: Check that user variables are only used with solita_jenkins_security_realm='jenkins'
   fail: msg="User variables are only allowed with solita_jenkins_security_realm='jenkins'"
