fix deprecated syntax

--- a/tasks/credentials.yml
+++ b/tasks/credentials.yml
@@ -26,6 +26,7 @@
 - name: Remove absent credentials
   solita_jenkins_credential:
     solita_jenkins_cli: "{{ solita_jenkins_cli }}"
-    id: "{{ item }}"
+    id: "{{ item.key }}"
     state: absent
-  with_items: "{{ solita_jenkins_absent_credentials }}"
+  with_dict: "{{ solita_jenkins_absent_credentials }}"
+  no_log: no
