--- a/tasks/restart.yml
+++ b/tasks/restart.yml
@@ -15,3 +15,4 @@
       retries: "{{ jenkins_connection_retries }}"
       delay: "{{ jenkins_connection_delay }}"
       changed_when: false
+      when: not ansible_check_mode
