--- a/vars/main.yml
+++ b/vars/main.yml
@@ -4,6 +4,7 @@ solita_jenkins_plugins_required:
   - credentials
   - ssh-credentials
   - authorize-project
+  - powershell
 
 solita_jenkins_job_dsl_workspace: /var/lib/jenkins/jobs/job-dsl/workspace
 solita_jenkins_url: "http://{{ jenkins_hostname }}:{{ jenkins_http_port }}{{ jenkins_url_prefix | default('') }}"
