--- a/tasks/security.yml
+++ b/tasks/security.yml
@@ -18,7 +18,7 @@
   register: matrix_auth_plugin
   with_items:
     - icon-shim
-    - matrix-auth'
+    - matrix-auth
   when: run_security_realm_task | default(true)
 
 - name: Create solita_jenkins password file
@@ -64,7 +64,7 @@
     group: jenkins
     mode: 0700
   register: security_realm
-  when: not ansible_check_mode and run_security_realm_task | default(true)
+  when: (not ansible_check_mode) and (run_security_realm_task | default(true))
 
 - name: Check if config.xml exists
   stat:
@@ -111,7 +111,7 @@
 
 - name: Check that user variables are only used with solita_jenkins_security_realm='jenkins'
   fail: msg="User variables are only allowed with solita_jenkins_security_realm='jenkins'"
-  when: (item | length > 0) and ((solita_jenkins_security_realm | default(None)) != 'jenkins') and run_security_realm_task | default(true)
+  when: (item | length > 0) and ((solita_jenkins_security_realm | default(None)) != 'jenkins') and (run_security_realm_task | default(true))
   with_items:
     - "{{ solita_jenkins_users }}"
     - "{{ solita_jenkins_absent_users }}"
